<resources>
    <string name="app_name">My Dictionary</string>
    <string name="action_settings">Settings</string>
    <string name="login">login</string>
    <string name="password">password</string>
    <string name="save">Save</string>
    <string name="registration">registration</string>
    <string name="remember_me">remember me</string>
    <string name="email">email</string>
    <string name="repeat_password">repeat password</string>
    <string name="create">Create</string>
    <string name="logout">Log Out</string>
    <string name="update">Update</string>
    <string name="exit">Exit</string>
    <string name="delete">Delete</string>
    <string name="password_reset">Password Reset</string>
    <string name="word">Word</string>
    <string name="search">Search</string>
    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Close</string>
    <string name="delete_account">Delete Account</string>
    <string name="delete_acc_dialog">Delete Account?</string>
    <string name="pos">Pos</string>
</resources>
