<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.MainActivity">

    <item
        android:id="@+id/pass_reset"
        android:orderInCategory="100"
        android:title="@string/password_reset"
        app:showAsAction="never" />
    <item
        android:id="@+id/update"
        android:orderInCategory="100"
        android:title="@string/update"
        app:showAsAction="never" />
    <item
        android:id="@+id/log_out"
        android:orderInCategory="100"
        android:title="@string/logout"
        app:showAsAction="never" />
    <item
        android:id="@+id/delete"
        android:orderInCategory="100"
        android:title="@string/delete"
        app:showAsAction="never" />
    <item
        android:id="@+id/exit"
        android:orderInCategory="100"
        android:title="@string/exit"
        app:showAsAction="never" />

</menu>
